I kinda forgot to commit regularly....

--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
     <title>Match the image</title>
 
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Schoolbell&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div class="wrapper">
         <header class="game-header">
-
+            <h1>
+                Match the image
+            </h1>
         </header>
 
         <main class="game-area">
 
-            
+            <div id="matching-position" class="matching">
+
+            </div>
+
+            <div id="matching-element" class="matching">
+
+            </div>
 
         </main>
     </div>
 
+
+    <script src="js/main.js"></script>
 </body>
 </html>
