WIP: Styling changes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 
             </div>
 
+            <div class="finished">
+                <h1>Your score: <span id="score">0</span></h1>
+                <button id="restart">Start again</button>
+            </div>
+
         </main>
     </div>
 
