Added proper files, fixed start again

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 
         <main class="game-area">
 
-            <div id="matching-position" class="matching">
+            <div class="in-progress">
+                <div id="matching-position" class="matching">
 
-            </div>
+                </div>
 
-            <div id="matching-element" class="matching">
+                <div id="matching-element" class="matching">
 
+                </div>
             </div>
 
             <div class="finished">
